--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "flowbite": "^1.8.1",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
+    "remove-accents": "^0.5.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
