--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.5.1",
+    "firebase": "^10.6.0",
     "flowbite": "^1.8.1",
     "html2pdf.js": "^0.10.1",
     "jspdf": "^2.5.1",
