--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
-    "axios": "^1.5.1",
     "firebase": "^10.6.0",
     "flowbite": "^1.8.1",
+    "gsap": "^3.12.3",
     "html2pdf.js": "^0.10.1",
-    "jspdf": "^2.5.1",
     "remove-accents": "^0.5.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
